--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.6-rc1
-parchment_version=1.20.4:2024.04.14
-loader_version=0.15.10
+minecraft_version=1.21-pre1
+parchment_version=1.20.6:2024.05.01
+loader_version=0.15.11
 
 # Mod Properties
 mod_version=1.2.1
@@ -16,27 +16,27 @@ archives_base_name=lenientdeath
 # Dependencies
 server_translations_api_version=2.3.0+1.20.5-rc2
 fabric_permissions_api_version=0.2-SNAPSHOT
-jflib_base_version=1.4.0+1.20.5
-jflib_config_version=0.2.3+1.20.5
-jflib_colour_version=1.1.0+1.20.5
-jflib_lying_version=0.5.5+1.20.5
+jflib_base_version=1.4.0+1.21
+jflib_config_version=0.2.3+1.21
+jflib_colour_version=1.1.0+1.21
+jflib_lying_version=0.5.5+1.21
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.97.6+1.20.6
-emi_version=1.1.0+1.20.4
+fabric-api_version=0.99.3+1.21
+emi_version=1.1.6+1.20.6
 modmenu_version=10.0.0-beta.1
 
-trinkets_version=3.8.0
-cardinal-components-api_version=5.4.0
+trinkets_version=3.9.0
+cardinal-components-api_version=6.0.0
 # JF_END_AUTO_UPDATE_BLOCK
 
 charm-of-undying_version=XK6G2Hfn
 
 # Publishing
-game_versions_mr=1.20.5,1.20.6
-game_versions_curse=1.20.5,1.20.6
+game_versions_mr=1.21
+game_versions_curse=1.21
 
-prefix=[1.20.5/6]
+prefix=[1.21]
 release_type=release
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Lenient Death
