--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21-pre1
+minecraft_version=1.21-rc1
 parchment_version=1.20.6:2024.05.01
 loader_version=0.15.11
 
@@ -14,7 +14,7 @@ maven_group=red.jackf
 archives_base_name=lenientdeath
 
 # Dependencies
-server_translations_api_version=2.3.0+1.20.5-rc2
+server_translations_api_version=2.3.1+1.21-pre2
 fabric_permissions_api_version=0.2-SNAPSHOT
 jflib_base_version=1.4.0+1.21
 jflib_config_version=0.2.3+1.21
@@ -22,9 +22,9 @@ jflib_colour_version=1.1.0+1.21
 jflib_lying_version=0.5.5+1.21
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.99.3+1.21
+fabric-api_version=0.100.0+1.21
 emi_version=1.1.6+1.20.6
-modmenu_version=10.0.0-beta.1
+modmenu_version=11.0.0-beta.1
 
 trinkets_version=3.9.0
 cardinal-components-api_version=6.0.0
