--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ parchment_version=1.20.6:2024.05.01
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.2.3
+mod_version=1.2.4
 maven_group=red.jackf
 archives_base_name=lenientdeath
 
@@ -26,10 +26,10 @@ fabric-api_version=0.100.0+1.21
 emi_version=1.1.6+1.20.6
 modmenu_version=11.0.0-beta.1
 
-trinkets_version=3.9.0
-cardinal-components-api_version=6.0.0
+trinkets_version=3.10.0
 # JF_END_AUTO_UPDATE_BLOCK
 
+cca_version=6.1.1
 charm-of-undying_version=XK6G2Hfn
 
 # Publishing
