--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
+minecraft_version=1.21.1
 parchment_version=1.20.6:2024.05.01
 loader_version=0.15.11
 
@@ -22,9 +22,9 @@ jflib_colour_version=1.1.0+1.21
 jflib_lying_version=0.5.5+1.21
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.100.0+1.21
-emi_version=1.1.6+1.20.6
-modmenu_version=11.0.0-beta.1
+fabric-api_version=0.102.1+1.21.1
+emi_version=1.1.12+1.21
+modmenu_version=11.0.1
 
 trinkets_version=3.10.0
 # JF_END_AUTO_UPDATE_BLOCK
@@ -33,10 +33,10 @@ cca_version=6.1.1
 charm-of-undying_version=XK6G2Hfn
 
 # Publishing
-game_versions_mr=1.21
-game_versions_curse=1.21
+game_versions_mr=1.21,1.21.1
+game_versions_curse=1.21,1.21.1
 
-prefix=[1.21]
+prefix=[1.21/.1]
 release_type=release
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Lenient Death
