--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.1
-parchment_version=1.20.6:2024.05.01
-loader_version=0.15.11
+minecraft_version=1.21.2
+parchment_version=1.21:2024.07.28
+loader_version=0.16.7
 
 # Mod Properties
 mod_version=1.2.5
@@ -14,17 +14,17 @@ maven_group=red.jackf
 archives_base_name=lenientdeath
 
 # Dependencies
-server_translations_api_version=2.3.1+1.21-pre2
+server_translations_api_version=2.4.0+1.21.2-rc1
 fabric_permissions_api_version=0.2-SNAPSHOT
-jflib_base_version=1.4.0+1.21
-jflib_config_version=0.2.3+1.21
-jflib_colour_version=1.1.0+1.21
-jflib_lying_version=0.5.5+1.21
+jflib_base_version=1.4.1+1.21.2
+jflib_config_version=0.2.3+1.21.2
+jflib_colour_version=1.1.0+1.21.2
+jflib_lying_version=0.5.5+1.21.2
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.102.1+1.21.1
+fabric-api_version=0.106.1+1.21.2
 emi_version=1.1.12+1.21
-modmenu_version=11.0.1
+modmenu_version=12.0.0-beta.1
 
 trinkets_version=3.10.0
 # JF_END_AUTO_UPDATE_BLOCK
@@ -33,10 +33,10 @@ cca_version=6.1.1
 charm-of-undying_version=XK6G2Hfn
 
 # Publishing
-game_versions_mr=1.21,1.21.1
-game_versions_curse=1.21,1.21.1
+game_versions_mr=1.21.2
+game_versions_curse=1.21.2
 
-prefix=[1.21/.1]
+prefix=[1.21.2]
 release_type=release
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Lenient Death
